--- a/Stream/angular.json
+++ b/Stream/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Stream": {
+    "streaming": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Stream",
+            "outputPath": "dist/streaming",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -68,18 +68,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Stream:build"
+            "browserTarget": "streaming:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Stream:build:production"
+              "browserTarget": "streaming:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Stream:build"
+            "browserTarget": "streaming:build"
           }
         },
         "test": {
@@ -116,16 +116,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Stream:serve"
+            "devServerTarget": "streaming:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "Stream:serve:production"
+              "devServerTarget": "streaming:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "Stream"
+  "defaultProject": "streaming"
 }
